Integrated locald posgresql db via prisma
Added authentification endpoints: login, register, logout

Implemented jwt authentification procudeures

Added middleware to check for authorized requests

Other minor updates
